# NFT-Staking-Program

./: .gitignore  README.md
create-reward-script/: package-lock.json  readme.md
create-reward-token/: create_token.ts  package.json
nft-stake-auth/: Anchor.toml
nft-stake-auth/programs/nft-stake-auth/: Cargo.toml
nft-stake-auth/programs/nft-stake-auth/src/: lib.rs
nft-stake-auth/programs/nft-stake-auth/src/instructions/: close_staking.rs  init_staking.rs  mod.rs  stake.rs  unstake.rs  withdraw_reward.rs
nft-stake-auth/programs/nft-stake-auth/src/state/: mod.rs  nft_record.rs  stake_details.rs
nft-stake-auth/programs/nft-stake-auth/src/utils/: calc_reward.rs  mod.rs
nft-stake-auth/tests/: nft-stake-auth.ts
nft-stake-vault/: Anchor.toml
nft-stake-vault/programs/nft-stake-vault/: Cargo.toml
nft-stake-vault/programs/nft-stake-vault/src/: lib.rs
nft-stake-vault/programs/nft-stake-vault/src/instructions/: add_funds.rs  change_reward.rs  close_staking.rs  extend_staking.rs  init_staking.rs  mod.rs  stake.rs  unstake.rs  withdraw_reward.rs
nft-stake-vault/programs/nft-stake-vault/src/state/: mod.rs  nft_record.rs  stake_details.rs
nft-stake-vault/programs/nft-stake-vault/src/utils/: calc_actual_balance.rs  calc_reward.rs  calc_total_emission.rs  mod.rs
nft-stake-vault/tests/: nft-stake-vault.ts
